# aws-legos

./: .gitignore
1-simple-ec2-creation/: template.yaml
11-ec2-with-unconfigured-efs/: template.yaml
12-simple-vpc/: template.yaml
13-hello-cdk/hello_cdk/: hello_cdk_stack.py
13-hello-cdk/tests/unit/: test_hello_cdk_stack.py
14-hello-terraform/: main.tf
15-hello-cdktf/: cdktf.json  main.py
16-hello-pulumi/: Pulumi.yaml  __main__.py
16-hello-pulumi/services/: vpc.py
17-learn-s3-hosting/: error.html  index.html  policy.json
18-learn-s3-lambda/: lambda_function.py
19-learn-sqs-lambda/: lambda_function.py
2-simple-ec2-with-parameters/: template.yaml
20-learn-api-gateway-lambda-dynamodb/: lambda_function.py
21-security-group/: app.py  pyproject.toml
22-simple-private-hosted-r53/: main.tf  variables.tf
23-identify-txt-records/: main.py  pyproject.toml
24-learn-packer/: docker.pkr.hcl  hello.pkr.hcl
3-ec2-with-ssm/: template.yaml
4-conditions/: template.yaml
5-ec2-with-nginx/: template.yaml
6-ec2-with-sg/: template.yaml
7-ec2-with-signal/: template-with-creation-policy.yaml  template-with-signal.yaml
8-ec2-cfn-hup/: template.yaml
9-ec2-with-change-set/: template-with-s3.yaml  template-without-s3.yaml
